--- a/70_project2/index.html
+++ b/70_project2/index.html
@@ -9,6 +9,7 @@
 <body>
     <!--  헤더 -->
     <header>
+        <!-- div 대신 로고는 h1으로 수정 -->
         <div>BR Architects</div>
         <nav>Projects About Contact </nav>
     </header>  <!--  /헤더 -->
