--- a/50_html/03_문단.html
+++ b/50_html/03_문단.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML</title>
 </head>
 <body>
     <!-- 단락(paragraph)이란? 하나 이상의 문장이 모여서 단락(문단)을 구성한다. -->
