--- a/50_html/20_시맨틱.html
+++ b/50_html/20_시맨틱.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML</title>
 </head>
 <body>
     <!-- 위아래 위치변경: alt+방향키(위/아래) -->
@@ -32,7 +32,7 @@
     <article><h2>아티클</h2></article>
     <aside>사이드</aside>
     <footer>
-       <!-- footer 안에 header, footer은 사용할수 없다. -->
+        <!-- footer 안에 header, footer은 사용할수 없다. -->
         <!-- <header>헤더</header> -->
         <article><h2>아티클</h2></article>
         <!-- <footer>푸터</footer> -->
