--- a/50_html/02_제목.html
+++ b/50_html/02_제목.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML</title>
 </head>
 <body>
     <!-- 선택한 영역 복제: shift+alt+방향키(위/아래) -->
