--- a/70_project2/index.html
+++ b/70_project2/index.html
@@ -7,73 +7,95 @@
     <title>BR Architects</title>
 </head>
 <body>
+   <!-- ctrl+alt+좌우방향키: 한페이지에 2개 코드창 보기 -->
     <!--  헤더 -->
     <header>
-        <div>BR Architects</div>
+       <!-- 로고 -->
+        <h1><b>BR</b> Architects</h1>
+        <!-- GNB: Gloval Navigation Bar -->
         <nav>Projects About Contact </nav>
     </header>  <!--  /헤더 -->
 
     <!-- 섹션1 -->
     <section> 
-        <h1><mark>BR</mark> Architects</h1>
+        <div>건물 이미지</div>
+        <h2><b>BR</b> Architects</h2>
     </section> <!-- /섹션1 -->
 
     <!-- 섹션2 -->
     <section> 
         <h2>Projects</h2>
-        <hr>
-        <p>Summer House</p>
-        <p>Brick House</p>
-        <p>Renovated</p>
-        <p>Barn House</p>
+        <div></div>
+            <div>Summer House 이미지1</div>
+            <h3>Summer House</h3>
+            <div>Brick House 이미지2</div>
+            <h3>Brick House</h3>
+            <div>Renovated 이미지3</div>
+            <h3>Renovated</h3>
+            <div>Barn House 이미지4</div>
+            <h3>Barn House</h3>
+            <div>Summer House 이미지5</div>
+            <h3>Summer House</h3>
+            <div>Brick House 이미지6</div>
+            <h3>Brick House</h3>
+            <div>Renovated 이미지7</div>
+            <h3>Renovated</h3>
+            <div>Barn House 이미지8</div>
+            <h3>Barn House</h3>
+        </div>
     </section>  <!-- /섹션2 -->
 
     <!-- 섹션3 -->
     <section>
         <h2>About</h2>
-        <hr>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-<h2>John Doe</h2>
-<h3>CEO & Founder</h3>
-<p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-Contact버튼
-
-<h2>Jane Doe</h2>
-<h3>Architect</h3>
-<p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-Contact버튼
-
-<h2>Mike Ross</h2>
-<h3>Architect</h3>
-<p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-Contact버튼
-
-<h2>Dan Star</h2>
-<h3>Architect</h3>
-<p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-Contact버튼
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div>
+            <div>
+                <div>인물 사진1</div>
+                <h3>John Doe</h3>
+                <P>CEO & Founder</P>
+                <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
+                <div>Contact버튼</div>
+            </div>
+            <div>
+                <div>인물 사진2</div>
+                <h3>Jane Doe</h3>
+                <P>Architect</P>
+                <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
+                <div>Contact버튼</div>
+            </div>
+            <div>
+                <div>인물 사진3</div>
+                <h3>Mike Ross</h3>
+                <P>Architect</P>
+                <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
+                <div>Contact버튼</div>
+            </div>
+            <div>
+                <div>인물 사진4</div>
+                <h3>Dan Star</h3>
+                <P>Architect</P>
+                <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
+                <div>Contact버튼</div>
+            </div>
+        </div>
     </section>    <!-- /섹션3 -->
 
     <!-- 섹션4 -->
     <section> 
         <h2>Contact</h2>
-        <hr>
         <p>Lets get in touch and talk about your next project.</p>
-        
         <div>Name</div>
         <div>Email</div>
         <div>Subject</div>
         <div>Comment</div>
-        
         <div>SEND MESSAGE</div>
+        <div>지도 이미지</div>
     </section> <!-- /섹션4 -->
 
     <!-- 푸터 -->
     <footer>
-        <div>
-            <p>Powered by w3.css</p>
-        </div>
+        <p>Powered by w3.css</p>
     </footer>  <!-- /푸터 -->
 </body>
 </html>
