--- a/70_project1/index.html
+++ b/70_project1/index.html
@@ -8,24 +8,44 @@
 </head>
 <body>
     <header>
-        <nav>HOME ABOUT PORTFLIO CONTACT</nav>
+        <nav>
+            <!-- shift+alt+아래방향키= alt+클릭= 다중선택(커서모양) -->
+            <ul>
+                <li>HOME </li>
+                <li>ABOUT </li>
+                <li>PORTFLIO </li>
+                <li>CONTACT</li>
+            </ul>
+        </nav>
     </header>
     <section>
-        <h1>MY WEBSITE LOGO</h1>
+        <h1>이진주</h1>
     </section>
     <section>
         <h3>ABOUT ME</h3>
-        <p>I love photography</p>
+        <p><em>I love Web Design</em></p>
         <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-     <div>
-         <p>Im really good at:</p>
-         <p>Photography</p>
-         <div>빈박스</div>
-         <p>Web Design</p>
-         <div>빈박스</div>
-         <p>Photoshop</p>
-         <div>빈박스</div>
+        <div>
+            <p>Im really good at:</p>
+            <ul>
+                <li>
+                    <p>Potoshop</p>
+                    <div>90%</div>
+                </li>
+                <li>
+                    <p>Illustrator</p>
+                    <div>90%</div>
+                </li>
+                <li>
+                    <p>HTML+CSS</p>
+                    <div>95%</div>
+                </li>
+                <li>
+                    <p>JavaScript</p>
+                    <div>70%</div>
+                </li>
+            </ul>
         </div>
     </section>
 <section>
@@ -34,8 +54,18 @@
     </div>
     <div>
         <h3>MY WORK</h3>
-        <p>Here are some of my latest lorem work ipsum tipsum.<br>
-            Click on the images to make them bigger</p>
+        <p><em>나의 최근 작품들이 여기에 있습니다.</em><br>
+            <em>클릭하면 큰 이미지로 볼 수 있습니다.</em></p>
+        <ul>
+            <li>작품 이미지1</li>
+            <li>작품 이미지2</li>
+            <li>작품 이미지3</li>
+            <li>작품 이미지4</li>
+            <li>작품 이미지5</li>
+            <li>작품 이미지6</li>
+            <li>작품 이미지7</li>
+            <li>작품 이미지8</li>
+        </ul>
     </div>
 </section>
 <section>
@@ -46,9 +76,9 @@
         <h3>WHERE I WORK</h3>
         <p>I'd love your feedback!</p>
         <div>
-            <p>Chicago, US<br>
+            <address>Chicago, US<br>
             Phone:+00 151515<br>
-            Email: mail@mail.com</p>
+            Email: mail@mail.com</address>
         </div>
         <p>Swing by for a cup of , or leave me a note:</p>
     </div>
