--- a/70_project1/index.html
+++ b/70_project1/index.html
@@ -19,12 +19,15 @@
         </nav>
     </header>
     <section>
-        <h1>이진주</h1>
+        <img src="images/parallax1.jpg" alt="나의 뒷모습(나와연관된 이미지)">
+        <h1>Lee Jin Ju</h1>
     </section>
     <section>
         <h3>ABOUT ME</h3>
         <p><em>I love Web Design</em></p>
         <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p><b>Lee Jin Ju</b></p>
+        <img src="images/Photo of Me.jpg" alt="나의 사진">
         <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <div>
             <p>Im really good at:</p>
@@ -50,6 +53,7 @@
     </section>
 <section>
     <div>
+        <img src="images/parallax2.jpg" alt="작품이미지">
         <h2>PORTFOLIO</h2>
     </div>
     <div>
@@ -57,14 +61,16 @@
         <p><em>나의 최근 작품들이 여기에 있습니다.</em><br>
             <em>클릭하면 큰 이미지로 볼 수 있습니다.</em></p>
         <ul>
-            <li>작품 이미지1</li>
-            <li>작품 이미지2</li>
-            <li>작품 이미지3</li>
-            <li>작품 이미지4</li>
-            <li>작품 이미지5</li>
-            <li>작품 이미지6</li>
-            <li>작품 이미지7</li>
-            <li>작품 이미지8</li>
+            <!-- ctrl+alt+아래방향키: 커서선택 -->
+            <!-- shift+오른쪽방향키 -->
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
         </ul>
     </div>
 </section>
