--- a/70_project1/index.html
+++ b/70_project1/index.html
@@ -63,19 +63,20 @@
         <ul>
             <!-- ctrl+alt+아래방향키: 커서선택 -->
             <!-- shift+오른쪽방향키 -->
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
+            <li><img src="images/pf_bearCloseup.jpg" alt=""></li>
+            <li><img src="images/pf_coffeeBeans.jpg" alt=""></li>
+            <li><img src="images/pf_emptyGhostTrain.jpg" alt=""></li>
+            <li><img src="images/pf_myBelovedTypewriter.jpg" alt=""></li>
+            <li><img src="images/pf_quietOcean.jpg" alt=""></li>
+            <li><img src="images/pf_sailing.jpg" alt=""></li>
+            <li><img src="images/pf_theMist.jpg" alt=""></li>
+            <li><img src="images/pf_theMistOverTheMountains.jpg" alt=""></li>
         </ul>
     </div>
 </section>
 <section>
     <div>
+        <img src="images/parallax3.jpg" alt="카메라사진">
         <h2>CONTACT</h2>
     </div>
     <div>
