--- a/70_project1/index.html
+++ b/70_project1/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이진주</title>
 </head>
+
 <body>
+    <!-- shift+alt+F: 자동들여쓰기(정렬) -->
     <header>
         <nav>
             <!-- shift+alt+아래방향키= alt+클릭= 다중선택(커서모양) -->
@@ -25,10 +28,23 @@
     <section>
         <h3>ABOUT ME</h3>
         <p><em>I love Web Design</em></p>
-        <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.</p>
         <p><b>Lee Jin Ju</b></p>
         <img src="images/Photo of Me.jpg" alt="나의 사진">
-        <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+            deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+            ex ea commodo consequat.</p>
         <div>
             <p>Im really good at:</p>
             <ul>
@@ -51,49 +67,52 @@
             </ul>
         </div>
     </section>
-<section>
-    <div>
-        <img src="images/parallax2.jpg" alt="작품이미지">
-        <h2>PORTFOLIO</h2>
-    </div>
-    <div>
-        <h3>MY WORK</h3>
-        <p><em>나의 최근 작품들이 여기에 있습니다.</em><br>
-            <em>클릭하면 큰 이미지로 볼 수 있습니다.</em></p>
-        <ul>
-            <!-- ctrl+alt+아래방향키: 커서선택 -->
-            <!-- shift+오른쪽방향키 -->
-            <li><img src="images/pf_bearCloseup.jpg" alt=""></li>
-            <li><img src="images/pf_coffeeBeans.jpg" alt=""></li>
-            <li><img src="images/pf_emptyGhostTrain.jpg" alt=""></li>
-            <li><img src="images/pf_myBelovedTypewriter.jpg" alt=""></li>
-            <li><img src="images/pf_quietOcean.jpg" alt=""></li>
-            <li><img src="images/pf_sailing.jpg" alt=""></li>
-            <li><img src="images/pf_theMist.jpg" alt=""></li>
-            <li><img src="images/pf_theMistOverTheMountains.jpg" alt=""></li>
-        </ul>
-    </div>
-</section>
-<section>
-    <div>
-        <img src="images/parallax3.jpg" alt="카메라사진">
-        <h2>CONTACT</h2>
-    </div>
-    <div>
-        <h3>WHERE I WORK</h3>
-        <p>I'd love your feedback!</p>
+    <section>
         <div>
-            <address>Chicago, US<br>
-            Phone:+00 151515<br>
-            Email: mail@mail.com</address>
+            <img src="images/parallax2.jpg" alt="작품이미지">
+            <h2>PORTFOLIO</h2>
         </div>
-        <p>Swing by for a cup of , or leave me a note:</p>
-    </div>
-</section>
-<footer>
-    <div>
-        <p>Powered by w3.css</p>
-    </div>
-</footer>
+        <div>
+            <h3>MY WORK</h3>
+            <p><em>나의 최근 작품들이 여기에 있습니다.</em><br>
+                <em>클릭하면 큰 이미지로 볼 수 있습니다.</em>
+            </p>
+            <ul>
+                <!-- ctrl+alt+아래방향키: 커서선택 -->
+                <!-- shift+오른쪽방향키 -->
+                <li><img src="images/pf_bearCloseup.jpg" alt="BearClose up"></li>
+                <li><img src="images/pf_coffeeBeans.jpg" alt="Coffee Beans"></li>
+                <li><img src="images/pf_emptyGhostTrain.jpg" alt="Empty Ghost Train"></li>
+                <li><img src="images/pf_myBelovedTypewriter.jpg" alt="My Be loved Typewriter"></li>
+                <li><img src="images/pf_quietOcean.jpg" alt="Quiet Ocean"></li>
+                <li><img src="images/pf_sailing.jpg" alt="Sailing"></li>
+                <li><img src="images/pf_theMist.jpg" alt="The Mist"></li>
+                <li><img src="images/pf_theMistOverTheMountains.jpg" alt="The Mist Over The Mountains"></li>
+            </ul>
+        </div>
+    </section>
+    <section>
+        <div>
+            <img src="images/parallax3.jpg" alt="연락관련 배경이미지">
+            <h2>CONTACT</h2>
+        </div>
+        <div>
+            <h3>WHERE I WORK</h3>
+            <p>당신의 연락을 기다리고 있습니다.</p>
+            <img src="images/map.jpg" alt="나의 위치">
+            <div>
+                <address>인천광역시 남동구<br>
+                    Phone: 010-1234-5678<br>
+                    Email: wireframe@hanmail.net</address>
+            </div>
+            <p>전화 주시거나 메일 주시면 연락드리겠습니다:</p>
+        </div>
+    </section>
+    <footer>
+        <div>
+            <p>Copyright 2023 LJJ. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
+
 </html>
