--- a/70_project1/index.html
+++ b/70_project1/index.html
@@ -12,12 +12,13 @@
     <!-- shift+alt+F: 자동들여쓰기(정렬) -->
     <header>
         <nav>
-            <!-- shift+alt+아래방향키= alt+클릭= 다중선택(커서모양) -->
+            <!-- ctrl+alt+아래방향키: 다중 커서 (세로) -->
+            <!-- alt+클릭: 다중커서 (세로) -->
             <ul>
-                <li>HOME </li>
-                <li>ABOUT </li>
-                <li>PORTFLIO </li>
-                <li>CONTACT</li>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">PORTFLIO</a></li>
+                <li><a href="#">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -89,6 +90,7 @@
                 <li><img src="images/pf_theMist.jpg" alt="The Mist"></li>
                 <li><img src="images/pf_theMistOverTheMountains.jpg" alt="The Mist Over The Mountains"></li>
             </ul>
+            <a href="#">더보기</a>
         </div>
     </section>
     <section>
@@ -110,6 +112,8 @@
     </section>
     <footer>
         <div>
+            <!-- #/#top은 현재 페이지의 최 상단을 가리킨다. -->
+            <a href="#top">위로 가기</a>
             <p>Copyright 2023 LJJ. All rights reserved.</p>
         </div>
     </footer>
