--- a/70_project2/index.html
+++ b/70_project2/index.html
@@ -1,88 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BR Architects</title>
 </head>
+
 <body>
-   <!-- ctrl+alt+좌우방향키: 한페이지에 2개 코드창 보기 -->
+    <!-- ctrl+alt+좌우방향키: 한페이지에 2개 코드창 보기 -->
     <!--  헤더 -->
     <header>
-       <!-- 로고 -->
-        <h1><b>BR</b> Architects</h1>
+        <!-- 로고 -->
+        <h1><a href="#"><b>BR</b> Architects</a></h1>
         <!-- GNB: Gloval Navigation Bar -->
-        <nav>Projects About Contact </nav>
-    </header>  <!--  /헤더 -->
+        <nav><a href="#">Projects About Contact</a> </nav>
+    </header> <!--  /헤더 -->
 
     <!-- 섹션1 -->
-    <section> 
-        <div>건물 이미지</div>
+    <section>
+        <img src="images/Architecture.jpg" alt="건물 이미지">
         <h2><b>BR</b> Architects</h2>
     </section> <!-- /섹션1 -->
 
     <!-- 섹션2 -->
-    <section> 
+    <section>
         <h2>Projects</h2>
         <div></div>
-            <div>Summer House 이미지1</div>
-            <h3>Summer House</h3>
-            <div>Brick House 이미지2</div>
-            <h3>Brick House</h3>
-            <div>Renovated 이미지3</div>
-            <h3>Renovated</h3>
-            <div>Barn House 이미지4</div>
-            <h3>Barn House</h3>
-            <div>Summer House 이미지5</div>
-            <h3>Summer House</h3>
-            <div>Brick House 이미지6</div>
-            <h3>Brick House</h3>
-            <div>Renovated 이미지7</div>
-            <h3>Renovated</h3>
-            <div>Barn House 이미지8</div>
-            <h3>Barn House</h3>
+        <div><img src="images/pj_summerHouse.jpg" alt="Summer House 이미지1"></div>
+        <h3>Summer House</h3>
+        <div><img src="images/pj_brickHouse.jpg" alt="Brick House 이미지2"></div>
+        <h3>Brick House</h3>
+        <div><img src="images/pj_renovated.jpg" alt="Renovated 이미지3"></div>
+        <h3>Renovated</h3>
+        <img src="images/pj_barnHouse.jpg" alt="Barn House 이미지4">
+        <h3>Barn House</h3>
+        <div><img src="images/pj_brickHouse.jpg" alt="Summer House 이미지5"></div>
+        <h3>Summer House</h3>
+        <div><img src="images/pj_summerHouse.jpg" alt="Brick House 이미지6"></div>
+        <h3>Brick House</h3>
+        <div><img src="images/pj_barnHouse.jpg" alt="Renovated 이미지7"></div>
+        <h3>Renovated</h3>
+        <div><img src="images/pj_renovated.jpg" alt="Barn House 이미지8"></div>
+        <h3>Barn House</h3>
         </div>
-    </section>  <!-- /섹션2 -->
+    </section> <!-- /섹션2 -->
 
     <!-- 섹션3 -->
     <section>
         <h2>About</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.</p>
         <div>
             <div>
-                <div>인물 사진1</div>
+                <div><img src="images/John.jpg" alt="john Doe"></div>
                 <h3>John Doe</h3>
                 <P>CEO & Founder</P>
                 <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                <div>Contact버튼</div>
+                <div><a href="#">Contact버튼</a></div>
             </div>
             <div>
-                <div>인물 사진2</div>
+                <div><img src="images/Jane.jpg" alt="Jane Doe"></div>
                 <h3>Jane Doe</h3>
                 <P>Architect</P>
                 <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                <div>Contact버튼</div>
+                <div><a href="#">Contact버튼</a></div>
             </div>
             <div>
-                <div>인물 사진3</div>
+                <div><img src="images/Mike.jpg" alt="Mike Ross"></div>
                 <h3>Mike Ross</h3>
                 <P>Architect</P>
                 <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                <div>Contact버튼</div>
+                <div><a href="#">Contact버튼</a></div>
             </div>
             <div>
-                <div>인물 사진4</div>
+                <div><img src="images/Dan.jpg" alt="Dan Star"></div>
                 <h3>Dan Star</h3>
                 <P>Architect</P>
                 <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                <div>Contact버튼</div>
+                <div><a href="#">Contact버튼</a></div>
             </div>
         </div>
-    </section>    <!-- /섹션3 -->
+    </section> <!-- /섹션3 -->
 
     <!-- 섹션4 -->
-    <section> 
+    <section>
         <h2>Contact</h2>
         <p>Lets get in touch and talk about your next project.</p>
         <div>Name</div>
@@ -90,12 +97,13 @@
         <div>Subject</div>
         <div>Comment</div>
         <div>SEND MESSAGE</div>
-        <div>지도 이미지</div>
+        <div><img src="images/map.jpg" alt="지도이미지"></img></div>
     </section> <!-- /섹션4 -->
 
     <!-- 푸터 -->
     <footer>
         <p>Powered by w3.css</p>
-    </footer>  <!-- /푸터 -->
+    </footer> <!-- /푸터 -->
 </body>
+
 </html>
