--- a/70_project2/index.html
+++ b/70_project2/index.html
@@ -15,7 +15,11 @@
         <!-- 로고 -->
         <h1><a href="#"><b>BR</b> Architects</a></h1>
         <!-- GNB: Gloval Navigation Bar -->
-        <nav><a href="#">Projects About Contact</a> </nav>
+        <ul>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contack</a></li>
+        </ul>
     </header> <!--  /헤더 -->
 
     <!-- 섹션1 -->
