--- a/70_project1/index.html
+++ b/70_project1/index.html
@@ -108,6 +108,13 @@
                     Email: wireframe@hanmail.net</address>
             </div>
             <p>전화 주시거나 메일 주시면 연락드리겠습니다:</p>
+            <!-- 네임입력하기 -->
+            <form action="message.php">
+                <input type="text" name="username" id="username" placeholder="이름">
+                <input type="email" name="useremail" id="useremail" placeholder="이메일">
+                <input type="text" name="usermsg" id="usermsg" placeholder="메시지">
+                <input type="submit" value="메시지전송하기">
+            </form>
         </div>
     </section>
     <footer>
