--- a/50_html/10_폼.html
+++ b/50_html/10_폼.html
@@ -32,7 +32,7 @@
         <!-- 아래4개는 새로생긴 태그 -->
         <!-- alt+위/아래 방향키: 위치이동 -->
         <h2>검색</h2>        
-        <input type="search" name="user_search" value="토끼 캐릭터"> 
+        <input type="search" name="query" value="토끼 캐릭터"> 
         <button>검색</button> <br>     
         
         <h2>회원가입</h2>
@@ -40,13 +40,15 @@
         <label>이메일: <input type="email" name="user_email"></label><br>
         <label>웹주소: <input type="url" name="user_url"></label><br>
         <hr>
+        <!-- value: 체크박스나 라이오버튼에서는 데이터로 전송될 데이터값 -->
         <!-- 체크박스(확인란): 다중 선택 가능 -->
-        <input type="checkbox" name="chkgroup">HTML
-        <input type="checkbox" name="chkgroup">CSS
-        <input type="checkbox" name="chkgroup">JavaScript <br>
+        <label><input type="checkbox" name="chkgroup" value="html" checked>HTML</label>
+        <label><input type="checkbox" name="chkgroup" value="css">CSS</label>
+        <label><input type="checkbox" name="chkgroup" value="js">JavaScript </label>
+        <br>
         <!-- 라디오버튼: 하나만 선택가능 -->
-        <input type="radio" name="radiogroup"> 동의 함
-        <input type="radio" name="radiogroup"> 동의하지않음
+        <label><input type="radio" name="radiogroup" value="yes" checked>동의 함</label>
+        <label><input type="radio" name="radiogroup" value="no">동의하지않음</label>
     </form>
 </body>
 </html>
