--- a/70_project2/index.html
+++ b/70_project2/index.html
@@ -35,28 +35,36 @@
         <h2>Projects</h2>
         <ul>
             <li>
-                <div><img src="images/pj_summerHouse.jpg" alt="Summer House 이미지1"></div><h3>Summer House</h3>
+                <div><img src="images/pj_summerHouse.jpg" alt="Summer House 이미지1"></div>
+                <h3>Summer House</h3>
             </li>
             <li>
-                <div><img src="images/pj_brickHouse.jpg" alt="Brick House 이미지2"></div><h3>Brick House</h3>
+                <div><img src="images/pj_brickHouse.jpg" alt="Brick House 이미지2"></div>
+                <h3>Brick House</h3>
             </li>
             <li>
-                <div><img src="images/pj_renovated.jpg" alt="Renovated 이미지3"></div><h3>Renovated</h3>
+                <div><img src="images/pj_renovated.jpg" alt="Renovated 이미지3"></div>
+                <h3>Renovated</h3>
             </li>
             <li>
-                <div><img src="images/pj_barnHouse.jpg" alt="Barn House 이미지4"></div><h3>Barn House</h3>
+                <div><img src="images/pj_barnHouse.jpg" alt="Barn House 이미지4"></div>
+                <h3>Barn House</h3>
             </li>
             <li>
-                <div><img src="images/pj_brickHouse.jpg" alt="Summer House 이미지5"></div><h3>Summer House</h3>
+                <div><img src="images/pj_brickHouse.jpg" alt="Summer House 이미지5"></div>
+                <h3>Summer House</h3>
             </li>
             <li>
-                <div><img src="images/pj_summerHouse.jpg" alt="Brick House 이미지6"></div><h3>Brick House</h3>
+                <div><img src="images/pj_summerHouse.jpg" alt="Brick House 이미지6"></div>
+                <h3>Brick House</h3>
             </li>
             <li>
-                <div><img src="images/pj_barnHouse.jpg" alt="Renovated 이미지7"></div><h3>Renovated</h3>
+                <div><img src="images/pj_barnHouse.jpg" alt="Renovated 이미지7"></div>
+                <h3>Renovated</h3>
             </li>
             <li>
-                <div><img src="images/pj_renovated.jpg" alt="Barn House 이미지8"></div><h3>Barn House</h3>
+                <div><img src="images/pj_renovated.jpg" alt="Barn House 이미지8"></div>
+                <h3>Barn House</h3>
             </li>
         </ul>
     </section> <!-- /섹션2 -->
