--- a/51_CSS/01_구문.html
+++ b/51_CSS/01_구문.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
+    <link rel="stylesheet" href="01_구문.css">
     <style>
         /* 형식: 선택기 {속성:값;} */
         /* 내부 CSS */
-        p{color:red;}
-
+        h1 {color:red;} 
     </style>
 </head>
 <body>
     <h1>CSS 구문</h1>
     <!-- 인라인 CSS: HTML의 스타일 속성의 값으로 기록 -->
-    <p style="color:red">인라인 CSS이란 HTML의 스타일 속성의 값으로 CSS의 속성과 값을 기록한다.</p> 
+    <p style="color:green">인라인 CSS이란 HTML의 스타일 속성의 값으로 CSS의 속성과 값을 기록한다.</p>
 </body>    
 </html>
