--- a/51_CSS/02_단순선택기.html
+++ b/51_CSS/02_단순선택기.html
@@ -11,8 +11,8 @@
             id > class > 요소
 
             id와 class 이름지정방법
-            -첫글자는 영문자,사용가능 특수문자만 사용가능(숫자사용x, 한글은 오류,용량으로인해 사용x)
-            -두번째 글자부터는 영문자,숫자,사용가능 특수문자 조합으로 사용
+            -첫글자는 영문자,특수문자만 사용가능(숫자사용x, 한글은 오류,용량으로인해 사용x)
+            -두번째 글자부터는 영문자,숫자,특수문자 조합으로 사용
             -영문자는 대소문자 구별함
             -사용가능 특수문자(_,-)
             -사용불가능 특수문자 (#,.,%,@,*,+,$)
