--- a/51_CSS/01_구문.html
+++ b/51_CSS/01_구문.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
+    <!-- 외부 CSS -->
     <link rel="stylesheet" href="01_구문.css">
     <style>
         /* 형식: 선택기 {속성:값;} */
