--- a/51_CSS/02_단순선택기-1.html
+++ b/51_CSS/02_단순선택기-1.html
@@ -6,12 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
     <style>
-        /*
         h1 {color: red;}
-        h2 {color: red;}
-        ul {color: red;}
-        li {color: red;}  
-        */
+        h2 {color: blue;}
+        ul {color: green;}
+        li {color: coral;}        
         
         /* 그룹 선택자:, */
         h1, h2, ul, {
