--- a/51_CSS/03-1_색상.html
+++ b/51_CSS/03-1_색상.html
@@ -7,7 +7,7 @@
     <title>HTML+CSS</title>
     <style>
         .p1 {color:red;}
-        .p2 {background-color: red;}
+        .p2 {background-color:yellow;}
         .p3 {
             /* border-color의 기본색상은 글자색이다. */
             color:green;
@@ -18,7 +18,7 @@
 </head>
 <body>
     <h1>CSS 색상 속성</h1>
-    <p class="p1">글자 색</p>
+    <p class="p1">글자</p>
     <p class="p2">배경</p>
     <p class="p3">테두리</p>    
 </body>
