--- a/51_CSS/05-4_웹폰트.html
+++ b/51_CSS/05-4_웹폰트.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+        
+        p {
+            font-size: 2em;
+            font-family: 'Roboto', sans-serif;
+        }
+
         .fw1 {font-weight: 100;}
         .fw2 {font-weight: lighter;}
         .fw3 {font-weight: 300;}
@@ -13,15 +20,16 @@
         .fw4 {font-weight: 400;}
         .fw5 {font-weight: 500;}
 
-        .fw6 {font-weight: 600;}
-        .fw7 {font-weight: bold;}
+        .fw6 {font-weight: bold;}
+        .fw7 {font-weight: 700;}
         .fw8 {font-weight: bolder;}
         .fw9 {font-weight: 900;}
 
     </style>
 </head>
 <body>
-    <h1>텍스트 굵기</h1>
+    <h1>웹폰트</h1>
+    <h2>구글 폰트</h2>
     <p class="fw1">Lorem ipsum dolor sit amet</p>
     <p class="fw2">Lorem ipsum dolor sit amet</p>
     <p class="fw3">Lorem ipsum dolor sit amet</p>
