--- a/51_CSS/webfont.html
+++ b/51_CSS/webfont.html
@@ -22,7 +22,7 @@
 
         @font-face {
             font-family: 'PyeongChangPeace-Bold';
-            src: url('http://chu.dothome.co.kr/font/PyeongChangPeace-Bold.woff');
+            src: url('http://chu.dothome.co.kr/font/PyeongChangPeace-Bold.ttf');
         }
 
         .fw2 {font-family: Raleway, sans-serif; }
