--- a/51_CSS/06_list-style.html
+++ b/51_CSS/06_list-style.html
@@ -1,51 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
     <style>
-        
+        /* <ul>에만 사용 */
+        .lst1 {list-style-type: disc;}
+        .lst2 {list-style-type: circle;}
+        .lst3 {list-style-type: square;}
+
+        /* 항목 마커 없음(제거), <ul><ol>모두 사용가능 */
+        .lst10 .lst11 {list-style-type: none;}
+
+         /* <ol>에만 사용 */
+        .lst4 {list-style-type: decimal;}
+        .lst5 {list-style-type: decimal-leading-zero;}
+        .lst6 {list-style-type: upper-alpha;}
+        .lst7 {list-style-type: lower-alpha;}
+        .lst8 {list-style-type: upper-roman;}
+        .lst9 {list-style-type: lower-roman;}
+
     </style>
 </head>
+
 <body>
 
-    <H1>목록</H1>
-    <H2>음료 목록</H2>
-    <ul>
-        <li><h2>커피를 좋아하는 순위</h2>
-            <ol>
-                <li>아메리카노</li>
-                <li>카페라떼</li>
-                <li>카페모카</li>
-            </ol>
-        </li>
-        <li>커피종류</li>
-            <ul>
-                <li>에스프레소</li>
-                <li>아메리카노</li>
-                <li>카페라떼</li>
-                <li>카페모카</li>
-                <li>아인슈페너</li>
-            </ul>
-        <li>차</li>
+    <H1>CSS 목록 관련 속성</H1>
+    <H2>순서없는 목록</H2>
+    <ul class="lst1">
+        <li>아메리카노</li>
+        <li>카페라떼</li>
+        <li>카페모카</li>
     </ul>
-    <H2>레드향 샐러드 레시피</H2>
-    <ol>
-        <li>샐러드 채소를 씻고 물기를 제거한 후 준비합니다.</li>
-        <li>레드향과 아보카도, 토마토를 먹기 좋은 크기를 썰어둡니다.</li>     
-        <li>드레싱 재료를 믹서에 갈아줍니다.</li>
-        <li>볼에 샐러드 채소와 썰어 둔 레드향, 아보카도, 토마토를 넣고 드레싱을 뿌리면 끝!</li>
+    <ul class="lst2">
+        <li>아메리카노</li>
+        <li>카페라떼</li>
+        <li>카페모카</li>
+    </ul>
+    <ul class="lst3">
+        <li>아메리카노</li>
+        <li>카페라떼</li>
+        <li>카페모카</li>
+    </ul>
+
+
+    <H2>순서있는 목록</H2>
+    <ol class="lst4">
+        <li>아메리카노</li>
+        <li>카페라떼</li>
+        <li>카페모카</li>
+    </ol>
+    <ol class="lst5">
+        <li>아메리카노</li>
+        <li>카페라떼</li>
+        <li>카페모카</li>
+    </ol>
+    <ol class="lst6">
+        <li>아메리카노</li>
+        <li>카페라떼</li>
+        <li>카페모카</li>
+    </ol>
+    <ol class="lst7" start="4">
+        <li>아메리카노</li>
+        <li>카페라떼</li>
+        <li>카페모카</li>
+    </ol>
+    <ol class="lst8">
+        <li>아메리카노</li>
+        <li>카페라떼</li>
+        <li>카페모카</li>
+    </ol>
+    <ol class="lst9">
+        <li>아메리카노</li>
+        <li>카페라떼</li>
+        <li>카페모카</li>
     </ol>
 
-    <H2>정의 목록</H2>
-    <dl>
-        <dt>HTML</dt>
-        <dd>영어에서 번역됨-HyperText Markup Language 또는 HTML은 웹 브라우저에 표시되도록 설계된 문서의 표준 마크업 언어입니다. Cascading Style Sheets 및 JavaScript와 같은 스크립팅 언어와 같은 기술의 도움을 받을 수 있습니다</dd>
-        <dt>CSS</dt>
-        <dd>종속형 시트 또는 캐스케이딩 스타일 시트는 마크업 언어가 실제 표시되는 방법을 기술하는 스타일 언어로, HTML과 XHTML에 주로 쓰이며, XML에서도 사용할 수 있다. W3C의 표준이고, 레이아웃과 스타일을 정의할 때의 자유도가 높다. 기본 파일명은 style.css이다.</dd>
-
-    </dl>
 </body>
+
 </html>
