--- a/51_CSS/06-1_list-style.html
+++ b/51_CSS/06-1_list-style.html
@@ -12,9 +12,16 @@
         .lstp2 {
             list-style-position: inside;
         }
-
-        .lst3 {
+        .lstp3 {
             list-style: none;
+        }
+        .lstp4 {
+            /* list-style-type: circle;
+            list-style-image: url(../assets/dot.png);
+            list-style-position: inside; */
+
+            /* list-style 속기속성: type(타입,형식) image(이미지) position(위치) */
+            list-style: circle url(../assets/dot.png) inside;
         }
     </style>
 </head>
@@ -34,7 +41,12 @@
     </ul>
     <ul class="lstp3">
         <li>아메리카노</li>
-        <li class="lst3">카페라떼</li>
+        <li >카페라떼</li>
+        <li>카페모카</li>
+    </ul>
+    <ul class="lstp4">
+        <li>아메리카노</li>
+        <li>카페라떼</li>
         <li>카페모카</li>
     </ul>
 
