--- a/51_CSS/07-3_background-size.html
+++ b/51_CSS/07-3_background-size.html
@@ -7,7 +7,7 @@
     <title>HTML+CSS</title>
     <style>
         div {
-            width: 700px;
+            width: 350px;
             height:350px;
             border: 1px solid red;
             margin: 20px;
@@ -19,6 +19,7 @@
         너비/높이: auto, cover, contain
         cover: 이미지가 일부 잘릴수있으나 가득채움
         contain: 이미지는 잘리지 않으나, 빈공간이 생길수 있음
+        숫자(단위)를 하나만 사용하면 너비를 나타내고, 높이는 비례적으로 조정된다.
         */
 
         div {
