--- a/70_project1/index.html
+++ b/70_project1/index.html
@@ -25,7 +25,7 @@
     <!-- 섹션1  -->
     <section>
         <img src="images/parallax1.jpg" alt="나의 뒷모습(나와연관된 이미지)">
-        <h1>Lee Jin Ju</h1>
+        <h1 class="logo">Lee Jin Ju</h1>
     </section><!-- //섹션1  -->
 
     <!-- 섹션2  -->
