--- a/51_CSS/04-6_text-shadow.html
+++ b/51_CSS/04-6_text-shadow.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
     <style>
-        /* 텍스트그림자: 가로위치 세로위치 흐림효과 색 →(흐림,색은 생략가능)
+        /* 텍스트그림자: 가로위치 세로위치 흐림효과 색, →(흐림,색은 생략가능)
         색의 기본값: 글자색 */
         .ts1 {
             color: white;
@@ -26,10 +26,7 @@
 </head>
 <body>
     <h1 class="ts1">text-shadow</h1>
-    <h2 claoss="ts2">text-shadow</h2>
-    <h3 claoss="ts3">text-shadow</h3>
-    <h3 claoss="ts4">text-shadow</h3>
-    <h3>text-shadow</h3>
-
+    <h2 class="ts2">text-shadow</h2>
+    <h3 class="ts3">text-shadow</h3>
 </body>
 </html>
