--- a/51_CSS/14-3_float.html
+++ b/51_CSS/14-3_float.html
@@ -6,10 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
     <style>
+        /* 의사 요소 선택자::after, ::before */
+        /* css로 내용을 삽입하는 선택기 */
+        .clearfix::after {
+            content: '';
+            clear: both;
+            display: block;
+        }
+
         p {
             line-height: 1.6;
             text-align: justify;
             word-break: break-all;
+            border: 1px solid red;
+            /* overflow: auto; */
+            /* clear: both; */
         }
         img {width: 200px; }
         .img1 {float: none; }
@@ -22,7 +33,7 @@
     <hr>
     <p><img class="img1" src="assets/House.jpg" alt="집">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate nisi dolor placeat itaque, eum quasi fuga nesciunt at nemo delectus nostrum dignissimos quaerat cupiditate adipisci nulla culpa iste voluptatum doloremque ad incidunt! Molestiae vel necessitatibus similique velit maxime distinctio itaque, illo esse, a dolor, libero perspiciatis reiciendis consequuntur. Sint, minus.</p>
 
-    <p><img class="img2" src="assets/House.jpg" alt="집">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate nisi dolor placeat itaque, eum quasi fuga nesciunt at nemo delectus nostrum dignissimos quaerat cupiditate adipisci nulla culpa iste voluptatum doloremque ad incidunt! Molestiae vel necessitatibus similique velit maxime distinctio itaque, illo esse, a dolor, libero perspiciatis reiciendis consequuntur. Sint, minus.</p>
+    <p class="clearfix"><img class="img2" src="assets/House.jpg" alt="집">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate nisi dolor placeat itaque, eum quasi fuga nesciunt at nemo delectus nostrum dignissimos quaerat cupiditate adipisci nulla culpa iste voluptatum doloremque ad incidunt! Molestiae vel necessitatibus similique velit maxime distinctio itaque, illo esse, a dolor, libero perspiciatis reiciendis consequuntur. Sint, minus.</p>
 
-    <p><img class="img3" src="assets/House.jpg" alt="집">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate nisi dolor placeat itaque, eum quasi fuga nesciunt at nemo delectus nostrum dignissimos quaerat cupiditate adipisci nulla culpa iste voluptatum doloremque ad incidunt! Molestiae vel necessitatibus similique velit maxime distinctio itaque, illo esse, a dolor, libero perspiciatis reiciendis consequuntur. Sint, minus.</p>
+    <p class="clearfix"><img class="img3" src="assets/House.jpg" alt="집">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate nisi dolor placeat itaque, eum quasi fuga nesciunt at nemo delectus nostrum dignissimos quaerat cupiditate adipisci nulla culpa iste voluptatum doloremque ad incidunt! Molestiae vel necessitatibus similique velit maxime distinctio itaque, illo esse, a dolor, libero perspiciatis reiciendis consequuntur. Sint, minus.</p>
 </html>
