--- a/51_CSS/14-4_float.html
+++ b/51_CSS/14-4_float.html
@@ -6,14 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
     <style>
-        .img, p {float: left;}
+        .container {
+            width: 940px;
+            background: yellow;
+            overflow: auto;
+        }
+        img {
+            width: 100%;
+            vertical-align: top;
+            padding-top: 50px;
+        }
+        .wrap {float: left; width: 45%;}
+        p {float: right; width: 45%;}
     </style>
 </head>
 <body>
     <h1>이미지와 단락</h1>
     <hr>
     <div class="container">
-        <div class="img">
+        <div class="wrap">
             <img src="assets/House.jpg" alt="집">
         </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta debitis necessitatibus cupiditate commodi distinctio dolorem ut? Quod, deserunt quidem? Labore commodi rerum autem atque facere minima quam voluptatum nihil perferendis debitis iure ab iste excepturi est expedita necessitatibus dolor earum nam vitae veritatis, soluta perspiciatis possimus amet dolores! Asperiores, neque.</p>
