--- a/51_CSS/02-9_의사요소선택기.html
+++ b/51_CSS/02-9_의사요소선택기.html
@@ -21,7 +21,7 @@
             color: red;
         }
 
-        ::placeholder {
+        input::placeholder {
             font-size: 10px;
             color: red;
         }
@@ -42,5 +42,7 @@
         <li>목록3</li>
     </ol>
     <input type="text" placeholder="아이디를 입력하세요">
+    <textarea placeholder="긴 글을 쓸때 사용한다.">
+        </textarea>
 </body>
 </html>
